# sharedLocker-pi

./: .gitignore  README.md  pyproject.toml
sharedlocker_pi/: api.py  env.py  gpio_test.py  index.py
sharedlocker_pi/utils/: camera.py  device.py  gpio.py  parser.py  request.py
